objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Created_By_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created_By_Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Lead_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead_Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Custom Lead Activity History</relationshipLabel>
        <relationshipName>Custom_Lead_Activity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New_Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old_Value</label>
        <type>TextArea</type>
    </fields>
    <label>Custom Lead Activity History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Created_By_Id__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Lead_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LeadHistory-{000}</displayFormat>
        <label>Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Lead Activity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>